@@ -1,2 +1,0 @@
-The xsetpointer program is used to select an XInput device as the main
-pointer. This is from the modular X.org X11 project.
