@@ -1,3 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2007/04/10 13:47:16 joerg Exp $
-bin/xsetpointer
-man/man1/xsetpointer.1
